scheduler activation, seda, capriccio, tinyos

--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -100,11 +100,14 @@ Server recovery is also harder, **as callbacks are kept in memory. Methods to de
 ## Performance 
 **Whole-file caching in AFS**: good when large files are frequently re-read, as it can serve the files directly from the local disk cache and reduce server load and network latency. 
   * whole-file transfer approach contacts servers only on opens and closes. Read and write operations, which are far more numerous, are transparent to servers and cause no network traffic.
+  * Main benefit is reduced network communication (when you have the whole file cached. )
   * Caching of entire files simplifies cache management. Venus only has to keep track of the tiles in its cache, not of their individual pages.
+* This compares with NFS: NFS caches file blocks or chunks rather than entire files. When a client accesses a file, it fetches and caches the specific blocks it needs. Subsequent operations on those blocks can be served from the cache.
+  * This is efficient for partial file access. 
 * files reads usually went to the local disk cache (and potentially local memory) 
 
 **Block-level caching in NFS**: better in use-cases where only a small subset of a large file is read or modified.
-* NFS can fetch or update only the necessary portions of a file, making it more efficient for workloads involving random or partial file access.
+* NFS can fetch or update only the **necessary portions** of a file, making it more efficient for workloads involving random or partial file access.
 * Also overwriting existing files is better in NFS, as it avoids the initial read operation that AFS requires to fetch the whole file before overwriting.
 
 ### Cache Consistency 
