Mock Wisconsin prelim questions

--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -53,7 +53,7 @@ There are two main problems with AFSv1:
     * Server used a single distinct process per **client** thus inducing **context switching** and other overheads 
         * Sol: building the server with threads instead of processes
 
-* Venus: client workstation. Vice: set of storage servers. 
+* **Venus: client workstation. Vice: set of storage servers.**
 
 ## AFSv2
 
@@ -100,8 +100,8 @@ Server recovery is also harder, **as callbacks are kept in memory. Methods to de
 ## Performance 
 **Whole-file caching in AFS**: good when large files are frequently re-read, as it can serve the files directly from the local disk cache and reduce server load and network latency. 
   * whole-file transfer approach contacts servers only on opens and closes. Read and write operations, which are far more numerous, are transparent to servers and cause no network traffic.
-  * Main benefit is reduced network communication (when you have the whole file cached. )
-  * Caching of entire files simplifies cache management. Venus only has to keep track of the tiles in its cache, not of their individual pages.
+  * Main benefit is **reduced network communication** (when you have the whole file cached. )
+  * Caching of entire files simplifies cache management. Venus only has to keep track of the **files** in its cache, not of their individual pages.
 * This compares with NFS: NFS caches file blocks or chunks rather than entire files. When a client accesses a file, it fetches and caches the specific blocks it needs. Subsequent operations on those blocks can be served from the cache.
   * This is efficient for partial file access. 
 * files reads usually went to the local disk cache (and potentially local memory) 
