--- a/4-distributed-systems/410-vr.md
+++ b/4-distributed-systems/410-vr.md
@@ -8,6 +8,8 @@ Read: July 3rd.
 
 Viewstamp Replication is a replication protocol developed in 1980's to handle failures in which nodes fail by crashing. 
 
+Asynchronous networks.  
+
 ## Goals of VR design 
 * _Availability_: user unaware of replicated service
 * _Consistency_: state machine replication
@@ -65,6 +67,9 @@ _Reasoning_:
    * In either case, a replica will execute all operation in their op-log between the last `commit-num` and the `commit-num` in the `<COMMIT>` message strictly following the order of operations and advance its `commit-num` as well.
 * Heartbeat:
    * `<PREPARE>` and `<COMMIT>` act as heartbeat for the primary. 
+* A replica won't accept a prepare with op-number `n` until it has entries for all earlier requests in its log.
+* When a non-primary replica learns of a commit, it waits until it has executed all earlier operations and until it has the request in its log. Then it executes the operation by performing the up-call to the service code, but does not send the reply to the client.
+  * Basically only primary replies to the client. 
 
 ### #2: View Change Protocol 
 * The view change protocol is used when **one of the replicas** detects that the current primary is unavailable and it proceeds to inform the rest of the ensemble. 
@@ -76,14 +81,18 @@ _Reasoning_:
 * **Viewstamps: < _view-number_, _op-number_>** 
     *  ensure operations that are "preparing" but not committed will not get lost
     *  i.e. a new leader may assign a previous used op-number to different operation, causing inconsistency
-*  Once a node advances `view-number` it no longer accepts messages from old view, instead it informs senders about **new view**
- 
+*  Once a node advances `view-number` it no longer accepts messages from old view, instead it informs senders about **new view**.
+*  It’s worth noting that it is crucial that replicas stop accepting PREPARE messages from earlier views once they start the view change protocol.
+
+
 Steps:
-* Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send `<START-VIEW-CHANGE, view-number, idenity >` to the new **primary**
+* Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send `<START-VIEW-CHANGE, view-number, idenity >` to **all replicas**
    *  Not accept any `PREPARE` message from old primary
 * When the other replicas receive a `<START-VIEW-CHANGE>` message with a `view-num` bigger than the one they have, they set their status to `view-change` and set the `view-num` to the view number in the message and reply with `<START-VIEW-CHANGE>` to **all replicas**. 
-* When new primary receives $f+1$ messages
-   *  Set new log = the _most recent_ of those messages (i.e. with the largest viewstamp), and the largest log. 
+* When a replica receives `f + 1` (including itself) `<START-VIEW-CHANGE>`, it sends a `<DO-VIEW-CHANGE>` to the new primary
+* IMPORTANT: we can skip the `<START-VIEW-CHANGE>` phase. 
+* When new primary receives $f+1$ `<DO-VIEW-CHANGE>` messages (including itself)
+   *  Set new log = the _most recent_ of those messages (i.e. with the largest viewstamp), tie break with the largest log. 
    *  Set `op-number` to latest entry in new _log_
    *  Change status to _normal_
    *  Inform other replicas completion of view change by sending `<START_VIEW, view-num, op-log, op-num, commit-num>`
@@ -95,11 +104,25 @@ Steps:
    *  Some similarity with Raft. 
 
 ### #3: Recovery Protocol 
+* The replica requests a state transfer whenever it receives a message with a larger view number. 
 * Replica $i$ sends a `<GET_STATE, view-num, op-num, commit-num, identity>` nessage to any of other replicas. 
    * The values are current values. 
 * If view number is different, replica $i$ replies `<NEW_STATE, view-num, commit-num, op-num, portions of log between the commit-num in GET_STATE and its op-num>` 
    * only when its status is $normal$ and its _view-number_ is greater than $v$, and is primary of its view.
 * Replica waits to receive response, then update its state. And send `PREPARE-OK` message for uncommitted ops. 
+
+### #3: Others
+* The recovering replica, `r`, sends a `⟨Recovery v,r⟩` message to all other replicas, where `v` is its starting view-number.
+* A replica replies to `Recovery` only when its status is normal, its view-number is greater than `v`, and it is the primary of its view. 
+* The recovering replica waits to receive a `RecoveryResponse` message. 
+
+### Ping
+
+* Primary sends pings (heartbeat)
+* When clients haven't heard from primary, it will broadcast the requests.
+
+### Disk writing
+* VR assumed failure independence and did not require writing to disk during normal case processing. Instead it wrote to disk during the view change. 
 
 
 ### Optimizations
