--- a/4-distributed-systems/415-ray.md
+++ b/4-distributed-systems/415-ray.md
@@ -1,9 +1,10 @@
 # Ray: A Distributed Framework for Emerging AI Applications
 
 Link: https://arxiv.org/pdf/1712.05889
+
 Read: August 2nd, 2024
 
-* Ray: expresses both task-paralllel and actor-based computations
+* Ray is a system that expresses both task-paralllel and actor-based computations, supported by a single dynamic execution engine. 
 * Lineage based fault tolerance for actors, replication-based fault tolerance for metadata store. 
 * RL: RL deals with learning to operate continuously within an uncertain environment based on delayed and limited feedback 
   * Both requires **distributed training**
@@ -44,7 +45,7 @@ Read: August 2nd, 2024
   * Futures operate on immutable objects and are stateless.
   * Tasks enable fine-grained load balancing through leveraging load-aware scheduling at task granularity
 * **Actors**
-  * A method execution is similar to a **task**, in that it executes remotely and returns a future, but differs in that it executes on a stateful worker. 
+  * A method execution is similar to a **task**, in that it executes remotely and returns a future, but differs in that it executes on a **stateful** worker. 
   * In contrast, actors provide much more efficient fine-grained updates, as these updates are performed on internal rather than external state, which typically requires serialization and deserialization. 
 * **ray.get()**
   * Return the values associated with one or more futures. This is blocking.
@@ -62,6 +63,7 @@ Read: August 2nd, 2024
 * Stateful edge
   * If method Mj is called right after method Mi on the same actor, then we add a stateful edge from Mi to Mj. 
   * Stateful edges help us embed actors in an otherwise stateless task graph, as they capture the implicit data dependency between successive method invocations sharing the internal state of an actor.
+* ![alt text](images/415-ray/task-graph.png)
 
 ## Application Layer
 * **Driver**
@@ -81,8 +83,8 @@ Read: August 2nd, 2024
 
 * **Distributed Scheduler**
   * Two-level scheduler: **global scheduler**, and **per-node local scheduler**.
-  * A task created at a node is submitted to the node's local scheduler
-  * If the node is overloaded, the per-node local scheduler forwards that task to the global scheduler.
+  * **A task created at a node is submitted to the node's local scheduler**
+  * If the node is overloaded, **the per-node local scheduler forwards that task to the global scheduler.**
   * Bottom-up scheduler: as the per-node scheduler schedules that locally first. 
   * The global scheduler considers each node’s load and task’s constraints to make scheduling decisions.
 
