--- a/5-security/58-sel4.md
+++ b/5-security/58-sel4.md
@@ -14,7 +14,7 @@ SeL4 now can even be a hypervisor, running VMs like Linux mainstream OS.
 
 * ![alt text](images/58-sel4/proof-structure.png)
 
-* The core of seL4’s verification is the functional correctness proof. More precisely, there is a formal specification of the kernel’s functionality, expressed in a mathematical language called **higher-order logic (HOL)**. This is represented by the box labelled **Abstract Model** in the figure. The functional correctness proof then says that the **C Implementation** is a refinement of the **Abstract Model**, meaning the possible behaviours of the C code are a subset of those allowed by the abstract model.
+* The core of seL4’s verification is the functional correctness proof. More precisely, there is a formal specification of the kernel’s functionality, expressed in a mathematical language called **higher-order logic (HOL)**. This is represented by the box labelled **Abstract Model** in the figure. The functional correctness proof then says that the **C Implementation** is a refinement of the **Abstract Model**, meaning the **possible behaviours of the C code** are a subset of those allowed by the abstract model.
 
 * How do we show that the compiler is fine? SeL4 also checks a representation of the binary with the that of the C Code. 
 
@@ -24,7 +24,7 @@ SeL4 now can even be a hypervisor, running VMs like Linux mainstream OS.
 
 * This paper presents the experience in performing the formal, machine-checked verification of the seL4 microkernel from an abstract specification down to its C implementation. This is the first formal proof of functional correctness of a complete, general-purpose operating-system kernel; assuming the correctness of the compiler, assembly code, boot code, managements of caches, and the hardware. 
 
-* As observed above, capabilities provide fine-grained access control, in line with the security principle of least privilege (also called principle of least authority, short POLA). This is in contrast to the more traditional access-control model of access-control lists (ACLs), which are used in mainstream systems such as Linux or Windows. 
+* As observed above, capabilities provide fine-grained access control, in line with the security principle of least privilege (also called principle of least authority, short POLA). This is in contrast to the more traditional **access-control model of access-control lists** (ACLs), which are used in mainstream systems such as Linux or Windows. 
 
 * This is a very coarse-grain form of access control, and is a fundamental limitation on what security policies can be enforced. A typical scenario is that a user wants to **run an untrusted program (downloaded from the internet) to process a particular file but wants to prevent the program from accessing any other files the user has access.** This is called a **confinement scenario**, and there is no clean way to do this in Linux, which is the reason people came up with heavyweight workarounds (I like to call them hacks) such as “chroot jails”, containers etc.
 
