--- a/4-distributed-systems/410-vr.md
+++ b/4-distributed-systems/410-vr.md
@@ -70,7 +70,7 @@ _Reasoning_:
 * A replica won't accept a prepare with op-number `n` until it has entries for all earlier requests in its log.
 * When a non-primary replica learns of a commit, it waits until it has executed all earlier operations and until it has the request in its log. Then it executes the operation by performing the up-call to the service code, but does not send the reply to the client.
   * Basically only primary replies to the client. 
-
+   
 ### #2: View Change Protocol 
 * The view change protocol is used when **one of the replicas** detects that the current primary is unavailable and it proceeds to inform the rest of the ensemble. 
   * Detected as there is no heartbeat -> triggers timeout. 
@@ -134,3 +134,9 @@ Steps:
    * Solution is to use lease. 
 * If the clients can accept stale reads, then read-only requests can be made directly to the follower replicas.
    * For example the client is connecting to the primary and ask for a write operation such as a registry increment (write a = a + 1), the primary will process the request as usual, but along with the response it will communicate the operation number (op-num) for this request. The client records the op-num and it uses to make subsequent requests to the follower replicas for a read-only request. The replica, if it hasn’t processed the operation in the client request op-num it will have to wait until it the primary communicate that it is safe to do so and then reply.
+
+
+
+### Why $f+1$? 
+
+* the quorum of replicas that processes a particular step of the protocol must have a non-empty intersection with the group of replicas available to handle the next step.
